# micro-journal

./: .gitignore  .gitmessage  .release-plz.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_PROJECT_SETUP.md  IMPLEMENTATION_PLAN.md  PROJECT_CONCEPT.md  PROJECT_STRUCTURE.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  technical_task.yml  user_story.yml
.github/workflows/: ci.yml  commit-lint.yml  dependencies.yml  docs.yml  pr-checks.yml  release-plz.yml  release.yml  swift-ci.yml
core/: Cargo.toml
core/src/: main.rs  man.rs
docs/: README.md  book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/user-guide/: installation.md  quick-start.md
scripts/: check-commits.sh  install-git-hooks.sh  pre-commit-hook.sh
